<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Raven</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="username">Username</string>
    <string name="namestr">Name</string>
    <string name="placeholder_contactname">Contact Name</string>
    <string name="placeholder_messagepreview">This is a long message ....</string>
    <string name="title_activity_message_list">Messages</string>
    <string name="action_addContact">Add Contact</string>
    <string name="choose_username">Choose username</string>
    <string name="message_username_not_set">Looks like you don\'t have a username set!
        \nMaybe you are a new user?
        \n
        \nChoose one that is fairly unique.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="message_username_blank">Username cannot be left blank!</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="placeholder_timestamp">10 Feb 2014, 17:55 am</string>
    <string name="title_activity_chat_thread">Chat Thread</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="title_mycode">My Code</string>
    <string name="title_scancode">Scan Code</string>
    <string name="start_scan">Start Scan</string>
    <string name="play_services_not_supported">Sorry, this device does not have Play Services installed!</string>
    <string name="title_activity_debug">Debug Screen</string>
    <string name="registering_device">Registering Device...</string>
    <string name="registration_completed">Registration Completed</string>
    <string name="action_clearDebugMessages">Clear Debug Messages</string>
    <string name="clear_contacts">Clear Contacts</string>
    <string name="contacts_cleared">Contacts cleared</string>
    <string name="qr_error">Error in QR code</string>
    <string name="contact_added">Contact added</string>
    <string name="title_activity_dispatch_gcmmessage">DispatchGCMMessage</string>
    <string name="sent">Sent</string>
    <string name="notif_title_messag_recd">Message Received</string>
    <string name="cleanup">Cleanup</string>
    <string name="cleanup_decription">Clears up unused data</string>
    <string name="ran_cleanup">Ran cleanup</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="dialogTitle_delete_contact">Remove Contact</string>
    <string name="contact_willbe_deleted">Contact will be deleted on relaunch</string>
    <string name="sending">Sending...</string>
    <string name="sending_unpairing">Unpairing...</string>
    <string name="contact_unpaired">Contact Unpaired</string>
    <string name="contact_has_unpaired">%s has unpaired from you</string>
    <string name="title_activity_share_via_raven">Send a Raven</string>
    <string name="message_length_exceeded">Message too long</string>
    <string name="contact_has_paired">%s has paired with you</string>
    <string name="contact_has_paired_encrypted">%s has paired with you (Encrypted connection)</string>
    <string name="registration_error">Registration Error</string>
    <string name="message_not_sent">Message could not be sent</string>
    <string name="cannot_add_yourself">Sorry, you cannot add yourself</string>
    <string name="action_selffDestructionMessage">Send read-once message</string>
    <string name="title_activity_sefl_destructing_message_compose">Read-once Message</string>
    <string name="to">To</string>
    <string name="destroy_after">Destroy After</string>
    <string name="destroy_after_20sec">20 sec</string>
    <string name="destroy_after_1min">1 min</string>
    <string name="destroy_after_2min">2 min</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="empty_message">Empty Message</string>
    <string name="title_activity_self_destructing_message_display">Read-once Message</string>
    <string name="from">From</string>
    <string name="will_be_destroyed_after">Will be destroyed in</string>
    <string name="placeholder_duration">20 seconds</string>
    <string name="read_once_message">Read-once message reveived</string>
    <string name="can_read_only_once">This message can be read only once</string>
    <string name="seconds">sec</string>
    <string name="destroy_after_5sec">5 sec</string>
    <string name="destroy_after_10sec">10 sec</string>
    <string name="destroy_after_custom">custom</string>
    <string name="custom_time">Custom Time</string>
    <string name="pick_custom_time">Pick custom duration (seconds)</string>
    <string name="not_a_number">Not a number</string>
    <string name="cancelled">Cancelled</string>
    <string name="title_activity_nfcpairing">NFC Pairing</string>
    <string name="nfc_instruction">Tap with another NFC enabled device to pair</string>
    <string name="nfc_not_available">NFC not available on this device</string>
    <string name="nfc_error">Error in NFC tag</string>
    <string name="action_pair_by_nfc">Use NFC</string>
    <string name="nfc_version_limit">NFC pairing only supported in JellyBean</string>
    <string name="not_sent">Not sent</string>
    <string name="dispatched">Dispatched</string>
    <string name="sending_regid_contacts">Sending new Registration ID to contacts</string>
    <string name="contact_renamed">Contact renamed</string>
    <string name="is_now">is now</string>
    <string name="not_encrypted">Not Encrypted</string>
    <string name="encrypted">Encrypted</string>
    <string name="only_use_once">Use this code with only one contact</string>
    <string name="pairing_rejected">Pairing rejected</string>
    <string name="contect_claims_key_expired">%s claims that the key you provided has expired. Make sure you use latest QR code for pairing!</string>
    <string name="tts_lang_not_suppported">Text to speech language not supported</string>

</resources>
